--- a/bandits/bandits_analysis.ipynb
+++ b/bandits/bandits_analysis.ipynb
@@ -4,21 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'bandits'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-85a4911e4263>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mbandits\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0marms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbernoulli_arms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mGame\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mArm\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'bandits'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from bandits import arms, bernoulli_arms, Game, Arm"
+    "from bandits import bernoulli_arms, normal_arms, uniform_arms, Game"
    ]
   },
   {
@@ -31,55 +19,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'arms' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-f8b4b4f97aca>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mnumber_of_arms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0marm\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0marms\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnumber_of_arms\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mgame\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mGame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marm\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mrounds\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'arms' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "[0.0,\n",
+       " 0.0,\n",
+       " 2.0,\n",
+       " 2.0,\n",
+       " 3.0,\n",
+       " 1.0,\n",
+       " 1.5,\n",
+       " 2.0,\n",
+       " 2.5,\n",
+       " 3.0,\n",
+       " 1.6666666666666665,\n",
+       " 1.9999999999999998,\n",
+       " 2.333333333333333,\n",
+       " 1.6666666666666665,\n",
+       " 1.625,\n",
+       " 1.3333333333333333,\n",
+       " 1.6666666666666665,\n",
+       " 1.9999999999999998,\n",
+       " 1.7,\n",
+       " 1.4545454545454544,\n",
+       " 1.727272727272727,\n",
+       " 1.5,\n",
+       " 1.7499999999999998,\n",
+       " 0.9999999999999998,\n",
+       " 1.2499999999999998]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "number_of_arms = 3\n",
-    "arm = arms(number_of_arms)\n",
+    "arm = bernoulli_arms(number_of_arms)\n",
     "game = Game(arm)\n",
     "\n",
-    "rounds = 10\n",
-    "game.epsilon_greedy(rounds)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "game.regret()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "game.reset()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "game.history"
+    "rounds = 25\n",
+    "delta = 1 / (number_of_arms * rounds ** 2)\n",
+    "cumulative_regret = game.upper_confidence_bound(rounds, delta)\n",
+    "game.reset()\n",
+    "cumulative_regret"
    ]
   },
   {
